# raindrop

./: AGENTS.md  README.md  main.py  open_meteo.py  pyproject.toml  settings.py
raindrop/commands/: current.py  daily.py  hourly.py  precip.py
