[project]
name = "weather-cli"
version = "0.1.0"
description = "A simple weather CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
weather = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
