[project]
name = "raindrop"
version = "0.1.0"
description = "A simple weather CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
]

[project.scripts]
raindrop = "raindrop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["raindrop"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
